Bug 343973 - Cannot enter text in new note in sequence diagram or must enter text blindly
Summary: Cannot enter text in new note in sequence diagram or must enter text blindly
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.13.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-09 17:23 UTC by Ofnuts
Modified: 2015-02-20 10:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.3 (KDE 14.12.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ofnuts 2015-02-09 17:23:48 UTC
When adding a new note there is no visual clue that one can enter text. The same happens when using "Change text" on the create note. If one types blindly some text is accepted but isn't seen until much later (it is saved in the XMI, and currently it is easier to edit the text in the XMI...)?
Comment 1 Ralf Habacker 2015-02-10 16:23:18 UTC
Note text is edited through the documentation window. If the documentation window is hidden, you can be displayed by clicking on Settings Menu -> Documentation window
Comment 2 Ofnuts 2015-02-11 00:32:19 UTC
OK. I do have the Documentation window out, but in an unselected tab. IMHO that window should become visible when using the "Change text" menu. Otherwise what is the purpose of that menu since you can change the text without it by going directly to the doc window? As it is, it is worse tan useless, it is misleading, since "Change text" elsewhere (Labels) gives you a specific dialog for text entry.
Comment 3 Ralf Habacker 2015-02-11 01:10:35 UTC
Just tried umbrello version 2.13.3 (opensuse) and did the following:
1. I closed the documentation window
2. added a note to a sequence diagram
3. selected the note widget
4. right clicked on the note widget and selected "change text" 
-> Documentation window is displayed and cursor is placed inside ready for typing. The same happens with a double click on the note widget.
I don't see a problem here.
Comment 4 Ofnuts 2015-02-15 21:33:32 UTC
Of course, it the documentation window is closed it is opened again. But if it's hidden behind the command history ta b, it remains hidden.

And in all good faith, if I'm creating a note in the top right corner, you would have to violently flash that documentation window in the opposite corner of the screen to make me notice that things are happening there.
Comment 5 Ralf Habacker 2015-02-20 08:14:30 UTC
(In reply to Ofnuts from comment #4)
> Of course, it the documentation window is closed it is opened again. But if
> it's hidden behind the command history ta b, it remains hidden.
got it, it depends on the currently choosen dock widgets layout
Comment 6 Ralf Habacker 2015-02-20 10:04:15 UTC
Git commit f6c3561ab0b7954e6d4d605be941dc36285e964a by Ralf Habacker.
Committed on 20/02/2015 at 10:01.
Pushed by habacker into branch 'Applications/14.12'.

Fix bug 'Cannot enter text in new note in sequence diagram or must enter text blindly'.

Bring documentation window in front if it is tabbed with other dock widgets.
FIXED-IN:2.15.3 (KDE 14.12.3)

M  +18   -0    umbrello/docwindow.cpp
M  +1    -0    umbrello/docwindow.h

http://commits.kde.org/umbrello/f6c3561ab0b7954e6d4d605be941dc36285e964a