Fix bug 'Cannot enter text in new note in sequence diagram or must enter text blindly'.

Bring documentation window in front if it is tabbed with other dock widgets.

BUG:343973
FIXED-IN:2.15.3 (KDE 14.12.3)